@@ -1,26 +1,18 @@
-package io.github.damienvdb.dcm4junit.dimse.cfind;
+package io.github.damienvdb.dcm4junit.dimse;
 
-import lombok.AccessLevel;
-import lombok.Getter;
-import lombok.RequiredArgsConstructor;
 import org.dcm4che3.data.Attributes;
-import org.dcm4che3.data.UID;
-import org.dcm4che3.net.service.DicomServiceException;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
-import static java.util.Collections.emptyList;
+import static io.github.damienvdb.dcm4junit.dimse.Stub.IncomingRequest;
 
-@RequiredArgsConstructor(access = AccessLevel.PACKAGE)
-class StubRegistry {
-
-    public static final String DEFAULT_SOPCLASS = UID.StudyRootQueryRetrieveInformationModelFind;
-
-    private final List<Stub> stubs = new ArrayList<>();
-    private final List<IncomingRequest> requests = new ArrayList<>();
+public class StubRegistry<S extends Stub<?>> {
+    protected final List<S> stubs = new ArrayList<>();
+    protected final List<IncomingRequest> requests = new ArrayList<>();
 
     private static String formatRequests(List<IncomingRequest> matches) {
         return matches.stream()
@@ -28,7 +20,7 @@ class StubRegistry {
                 .collect(Collectors.joining("\n\n"));
     }
 
-    public void register(Stub stub) {
+    public void register(S stub) {
         this.stubs.add(stub);
     }
 
@@ -36,23 +28,23 @@ class StubRegistry {
         return stubs.isEmpty();
     }
 
-    List<Attributes> findResponses(Attributes rq, Attributes keys) throws DicomServiceException {
+    public Optional<S> findStub(Attributes rq, Attributes keys) {
         IncomingRequest incomingRequest = new IncomingRequest(rq, keys);
         requests.add(incomingRequest);
-        List<Stub> responsesMatched = stubs.stream()
+        List<S> responsesMatched = stubs.stream()
                 .filter(s -> s.test(incomingRequest))
-                .collect(Collectors.toList());
+                .toList();
         if (responsesMatched.isEmpty()) {
-            return emptyList();
+            return Optional.empty();
         }
         if (responsesMatched.size() == 1) {
-            return responsesMatched.get(0).apply();
+            return Optional.of(responsesMatched.get(0));
         }
 
         throw new IllegalStateException("More than one stub matched for " + keys);
     }
 
-    void verifyRequests(Predicate<Attributes> predicate) {
+    public void verifyRequests(Predicate<Attributes> predicate) {
         List<IncomingRequest> matches = requests.stream()
                 .filter(r -> predicate.test(r.getKeys()))
                 .collect(Collectors.toList());
@@ -72,12 +64,5 @@ class StubRegistry {
 
     public int size() {
         return this.stubs.size();
-    }
-
-    @RequiredArgsConstructor
-    @Getter
-    static final class IncomingRequest {
-        private final Attributes rq;
-        private final Attributes keys;
     }
 }
